--- a/careers.html
+++ b/careers.html
@@ -91,7 +91,7 @@
                                 data-target="#collapse0" aria-expanded="false" aria-controls="collapse0">
                                 Sales Executive
                             </button>
-                            <span>San Francisco, US</span>
+                            <span style="text-align:right;">San Francisco, US</span>
                         </div>
                     </div>
                     <div id="collapse0" class="collapse" aria-labelledby="heading0" data-parent="#accordionExample">
@@ -130,7 +130,7 @@
                                 data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                                 Fullstack Developer
                             </button>
-                            <span>San Francisco, US</span>
+                            <span style="text-align:right;">San Francisco, US</span>
                         </div>
                     </div>
                     <div id="collapseOne" class="collapse" aria-labelledby="headingPe" data-parent="#accordionExample">
@@ -175,7 +175,7 @@
                                 data-target="#collapse01" aria-expanded="false" aria-controls="collapse01">
                                 Sales Executive
                             </button>
-                            <span>Toronto, CA</span>
+                            <span style="text-align:right;">Toronto, CA</span>
                         </div>
                     </div>
                     <div id="collapse01" class="collapse" aria-labelledby="heading01" data-parent="#accordionExample">
@@ -214,7 +214,7 @@
                                 data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                 Solutions Architect
                             </button>
-                            <span>Toronto, CA</span>
+                            <span style="text-align:right;">Toronto, CA</span>
                         </div>
                     </div>
                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
@@ -265,7 +265,7 @@
                                 data-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                                 Fullstack Developer
                             </button>
-                            <span>Karachi, Pakistan</span>
+                            <span style="text-align:right;">Karachi, Pakistan</span>
                         </div>
                     </div>
                     <div id="collapseOne" class="collapse" aria-labelledby="headingPe" data-parent="#accordionExample">
@@ -310,7 +310,7 @@
                                 data-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
                                 UI/UX Desginer
                             </button>
-                            <span>Karachi, Pakistan</span>
+                            <span style="text-align:right;">Karachi, Pakistan</span>
                         </div>
                     </div>
                     <div id="collapse2" class="collapse" aria-labelledby="heading2" data-parent="#accordionExample">
@@ -351,7 +351,7 @@
                                 data-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
                                 Data Engineer (2 Open Positions)
                             </button>
-                            <span>Karachi, Pakistan</span>
+                            <span style="text-align:right;">Karachi, Pakistan</span>
                         </div>
                     </div>
                     <div id="collapse4" class="collapse" aria-labelledby="heading4" data-parent="#accordionExample">
@@ -389,7 +389,7 @@
                                 data-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
                                 Software Engineer (3 Open Positions)
                             </button>
-                            <span>Karachi, Pakistan</span>
+                            <span style="text-align:right;">Karachi, Pakistan</span>
                         </div>
                     </div>
                     <div id="collapse5" class="collapse" aria-labelledby="heading5" data-parent="#accordionExample">
