--- a/index.html
+++ b/index.html
@@ -97,18 +97,21 @@
 
         </header>
 
-        <div class="row about-container align-items-center">
+        <div class="row about-container align-items-center py-5">
 
           <div class="col-lg-6 content order-lg-1 order-2">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea commodo consequat.
+              Rapid innovation is an essential feature of digital information technology.SeedCode understands the
+              importance of remaining current through frequent self-reinvention. We accomplish this by continually
+              attracting the brightest minds in modern digital paradigms and platforms. By maintaining a roster of
+              skilled technology professionals across every business function, SeedCode distinguishes itself by offering
+              its client organizations a single touchpoint to address all of their enterprise technology needs.
             </p>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea commodo consequat.
+              SeedCode aspires to enhance the productivity and growth of organizations around the world with a
+              comprehensive range of digital solutions and services. As a top-tier employer, SeedCode promotes employee
+              ownership, leadership, professional fulfillment, and job satisfaction. We deliver profitability and
+              business success to our global clients through precise execution and technical excellence.
             </p>
 
             <!-- 
