--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </p>
         <button class="btn ph-btn" type="button" data-toggle="collapse" data-target="#collapseExample"
           aria-expanded="false" aria-controls="collapseExample">
-          See What We Built
+          See What We Built <i class="fa fa-play-circle fa-lg"></i>
         </button>
         <div class="collapse" id="collapseExample">
           <div class="embed-responsive embed-responsive-16by9 p-5">
@@ -203,7 +203,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/app1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="#">App 1</a></h4>
+                <h4>App 1</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea commodo consequat.</p>
@@ -221,7 +221,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/web3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="#">Web 3</a></h4>
+                <h4>Web 3</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
 
@@ -236,7 +236,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/app2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="#">App 2</a></h4>
+                <h4>App 2</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea commodo consequat.</p>
@@ -257,7 +257,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/web2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="#">Web 2</a></h4>
+                <h4>Web 2</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea commodo consequat.</p>
@@ -277,7 +277,7 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/app3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="#">App 3</a></h4>
+                <h4>App 3</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. </p>
                 <div>
@@ -293,17 +293,16 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/web1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a href="#">Web 1</a></h4>
+                <div class="portfolio-info-header">
+                  <span>Web 1</span> <a href="img/portfolio/web1.jpg" class="link-preview" data-lightbox="portfolio"
+                    data-title="Web 1" title="Preview"><i class="fa fa-expand"></i></a>
+                </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. </p>
                 <div>
                   <button class="btn preview-btn">Request Demo</button>
                 </div>
-                <!-- <div>
-                  <a href="img/portfolio/web1.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 1"
-                    title="Preview"><i class="ion ion-eye"></i></a>
-                  <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
-                </div> -->
+
               </div>
             </div>
           </div>
