--- a/index.html
+++ b/index.html
@@ -203,7 +203,10 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/app1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 1</h4>
+                <div class="portfolio-info-header">
+                  <span>App 1</span> <a href="img/portfolio/app1.jpg" class="link-preview" data-lightbox="portfolio"
+                    data-title="App 1" title="Preview"><i class="fa fa-expand"></i></a>
+                </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea commodo consequat.</p>
@@ -221,7 +224,10 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/web3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
+                <div class="portfolio-info-header">
+                  <span>Web 3</span> <a href="img/portfolio/web3.jpg" class="link-preview" data-lightbox="portfolio"
+                    data-title="Web 3" title="Preview"><i class="fa fa-expand"></i></a>
+                </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
 
@@ -236,7 +242,10 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/app2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
+                <div class="portfolio-info-header">
+                  <span>App 2</span> <a href="img/portfolio/app2.jpg" class="link-preview" data-lightbox="portfolio"
+                    data-title="App 2" title="Preview"><i class="fa fa-expand"></i></a>
+                </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea commodo consequat.</p>
@@ -257,7 +266,10 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/web2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 2</h4>
+                <div class="portfolio-info-header">
+                  <span>Web 2</span> <a href="img/portfolio/web2.jpg" class="link-preview" data-lightbox="portfolio"
+                    data-title="Web 2" title="Preview"><i class="fa fa-expand"></i></a>
+                </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea commodo consequat.</p>
@@ -277,7 +289,10 @@
             <div class="portfolio-wrap">
               <img src="img/portfolio/app3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 3</h4>
+                <div class="portfolio-info-header">
+                  <span>App 3</span> <a href="img/portfolio/app3.jpg" class="link-preview" data-lightbox="portfolio"
+                    data-title="App 3" title="Preview"><i class="fa fa-expand"></i></a>
+                </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. </p>
                 <div>
