--- a/careers.html
+++ b/careers.html
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                     <div id="collapse0" class="collapse" aria-labelledby="heading0" data-parent="#accordionExample">
-                        <div class="card-body p-5">
+                        <div class="card-body">
                             <p>
                                 We're looking for a Sales Executives who will participate in key aspects of the sales
                                 cycle, including generating leads, driving opportunities and managing prospect
@@ -134,7 +134,7 @@
                         </div>
                     </div>
                     <div id="collapseOne" class="collapse" aria-labelledby="headingPe" data-parent="#accordionExample">
-                        <div class="card-body p-5">
+                        <div class="card-body">
                             <h6>Education</h6>
                             <ul>
                                 <li>Bachelor’s degree or higher in Computer
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                     <div id="collapse01" class="collapse" aria-labelledby="heading01" data-parent="#accordionExample">
-                        <div class="card-body p-5">
+                        <div class="card-body">
                             <p>
                                 We're looking for a Sales Executives who will participate in key aspects of the sales
                                 cycle, including generating leads, driving opportunities and managing prospect
@@ -219,7 +219,7 @@
                     </div>
                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
                         data-parent="#accordionExample">
-                        <div class="card-body p-5">
+                        <div class="card-body">
                             <p> We're looking for a candidate with 5 or more years of experience in successfully driving
                                 software development activities, architecting
                                 and creating technical specifications, technical leadership and mentoring. Our ideal
@@ -269,7 +269,7 @@
                         </div>
                     </div>
                     <div id="collapseOne" class="collapse" aria-labelledby="headingPe" data-parent="#accordionExample">
-                        <div class="card-body p-5">
+                        <div class="card-body">
                             <h6>Education</h6>
                             <ul>
                                 <li>Bachelor’s degree or higher in Computer
@@ -314,7 +314,7 @@
                         </div>
                     </div>
                     <div id="collapse2" class="collapse" aria-labelledby="heading2" data-parent="#accordionExample">
-                        <div class="card-body p-5">
+                        <div class="card-body">
 
                             <h6>Qualifications</h6>
                             <ul>
@@ -355,7 +355,7 @@
                         </div>
                     </div>
                     <div id="collapse4" class="collapse" aria-labelledby="heading4" data-parent="#accordionExample">
-                        <div class="card-body p-5">
+                        <div class="card-body">
                             <h6>Education</h6>
                             <ul>
                                 <li>Bachelor’s degree or higher in Data Science, Computer
@@ -393,7 +393,7 @@
                         </div>
                     </div>
                     <div id="collapse5" class="collapse" aria-labelledby="heading5" data-parent="#accordionExample">
-                        <div class="card-body p-5">
+                        <div class="card-body">
                             <h6>Education</h6>
                             <ul>
                                 <li>Bachelor’s degree or higher in Computer
