--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Libraries CSS Files -->
-  <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/0a6cac2be0.js" crossorigin="anonymous"></script>
   <link href="lib/animate/animate.min.css" rel="stylesheet">
   <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet">
   <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
@@ -76,7 +76,10 @@
           companies, and find a job
           you love.</p>
         <div class="">
-          <a href="mailto:rabeel@seedcode.io" class="btn-main scrollto">Get Started</a>
+          <a href="mailto:rabeel@seedcode.io" class=" scrollto get-started">
+            <span>Get Started</span>
+            <i class="fa fa-envelope fa-lg"></i>
+          </a>
           <a href="#portfolio" class="btn-main scrollto">Portfolio</a>
         </div>
       </div>
@@ -175,7 +178,8 @@
         </p>
         <button class="btn ph-btn" type="button" data-toggle="collapse" data-target="#collapseExample"
           aria-expanded="false" aria-controls="collapseExample">
-          See What We Built <i class="fa fa-play-circle fa-lg"></i>
+          See What We Built
+          <i class="fas fa-play-circle fa-lg"></i>
         </button>
         <div class="collapse" id="collapseExample">
           <div class="embed-responsive embed-responsive-16by9 p-5">
@@ -350,7 +354,7 @@
                   <p>
                     <span style="font-weight: 600; font-style: normal;">Previously</span>
                     B.A. in Physics @ UPENN <br />
-                    B.S. in Electrical Engineering @ UPENN <br />
+                    B.S.E. in Electrical Engineering @ UPENN <br />
                     Masters in Systems Engineering @ UPENN <br />
 
                     <span style="font-weight: 600; font-style: normal; margin-top: 10px;">Currently</span>
@@ -376,13 +380,12 @@
                   <p>
                     <span style="font-weight: 600; font-style: normal;">Previously</span>
                     Founder @ BaireGroup <br />
-                    B.S. in Networks Engineering @ UPENN <br />
+                    B.S.E in Networks Engineering @ UPENN <br />
                     Masters in Math @ UPENN <br />
 
                     <span style="font-weight: 600; font-style: normal; margin-top: 10px;">Currently</span>
                     Founder @ Commonwealth Labs<br />
-                    Candidate for PhD in Computer Science @ Hebrew
-                    University of Jerusalem
+                    Candidate for PhD in Computer Science @ HBU
                   </p>
                   <div class="social">
                     <a href="https://www.linkedin.com/in/drewcstone/" target="_blank"><i class="fa fa-linkedin"></i></a>
