--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
         </header>
         <h4 class="h4"> Our Latest Project</h4>
         <p class="portfolio-highlight">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat.
+          consequat. -->
         </p>
         <button class="btn ph-btn" type="button" data-toggle="collapse" data-target="#collapseExample"
           aria-expanded="false" aria-controls="collapseExample">
@@ -211,12 +211,12 @@
                   <span>App 1</span> <a href="img/portfolio/app1.jpg" class="link-preview" data-lightbox="portfolio"
                     data-title="App 1" title="Preview"><i class="fa fa-expand"></i></a>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea commodo consequat.</p>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                   labore
-                  et dolore magna aliqua. </p>
+                  et dolore magna aliqua. </p> -->
                 <div>
                   <button class="btn preview-btn">Request Demo</button>
                 </div>
@@ -232,8 +232,8 @@
                   <span>Web 3</span> <a href="img/portfolio/web3.jpg" class="link-preview" data-lightbox="portfolio"
                     data-title="Web 3" title="Preview"><i class="fa fa-expand"></i></a>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p> -->
 
                 <div>
                   <button class="btn preview-btn">Request Demo</button>
@@ -250,83 +250,83 @@
                   <span>App 2</span> <a href="img/portfolio/app2.jpg" class="link-preview" data-lightbox="portfolio"
                     data-title="App 2" title="Preview"><i class="fa fa-expand"></i></a>
                 </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea commodo consequat.</p>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                   labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                   aliquip ex ea commodo consequat. </p>
-                <div>
-                  <button class="btn preview-btn">Request Demo</button>
-                </div>
+                <div> -->
+                <button class="btn preview-btn">Request Demo</button>
               </div>
             </div>
           </div>
-
-
-
-          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.1s">
-            <div class="portfolio-wrap">
-              <img src="img/portfolio/web2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <div class="portfolio-info-header">
-                  <span>Web 2</span> <a href="img/portfolio/web2.jpg" class="link-preview" data-lightbox="portfolio"
-                    data-title="Web 2" title="Preview"><i class="fa fa-expand"></i></a>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat.</p>
-
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                  labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. </p>
-                <div>
-                  <button class="btn preview-btn">Request Demo</button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.2s">
-            <div class="portfolio-wrap">
-              <img src="img/portfolio/app3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <div class="portfolio-info-header">
-                  <span>App 3</span> <a href="img/portfolio/app3.jpg" class="link-preview" data-lightbox="portfolio"
-                    data-title="App 3" title="Preview"><i class="fa fa-expand"></i></a>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. </p>
-                <div>
-                  <button class="btn preview-btn">Request Demo</button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-
-
-          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.2s">
-            <div class="portfolio-wrap">
-              <img src="img/portfolio/web1.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <div class="portfolio-info-header">
-                  <span>Web 1</span> <a href="img/portfolio/web1.jpg" class="link-preview" data-lightbox="portfolio"
-                    data-title="Web 1" title="Preview"><i class="fa fa-expand"></i></a>
-                </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. </p>
-                <div>
-                  <button class="btn preview-btn">Request Demo</button>
-                </div>
-
-              </div>
-            </div>
-          </div>
-
         </div>
+
+
+
+        <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.1s">
+          <div class="portfolio-wrap">
+            <img src="img/portfolio/web2.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <div class="portfolio-info-header">
+                <span>Web 2</span> <a href="img/portfolio/web2.jpg" class="link-preview" data-lightbox="portfolio"
+                  data-title="Web 2" title="Preview"><i class="fa fa-expand"></i></a>
+              </div>
+              <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea commodo consequat.</p>
+
+              <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                labore
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea commodo consequat. </p> -->
+              <div>
+                <button class="btn preview-btn">Request Demo</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.2s">
+          <div class="portfolio-wrap">
+            <img src="img/portfolio/app3.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <div class="portfolio-info-header">
+                <span>App 3</span> <a href="img/portfolio/app3.jpg" class="link-preview" data-lightbox="portfolio"
+                  data-title="App 3" title="Preview"><i class="fa fa-expand"></i></a>
+              </div>
+              <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. </p> -->
+              <div>
+                <button class="btn preview-btn">Request Demo</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+        <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.2s">
+          <div class="portfolio-wrap">
+            <img src="img/portfolio/web1.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <div class="portfolio-info-header">
+                <span>Web 1</span> <a href="img/portfolio/web1.jpg" class="link-preview" data-lightbox="portfolio"
+                  data-title="Web 1" title="Preview"><i class="fa fa-expand"></i></a>
+              </div>
+              <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. </p> -->
+              <div>
+                <button class="btn preview-btn">Request Demo</button>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+      </div>
 
       </div>
     </section><!-- #portfolio -->
@@ -432,6 +432,9 @@
                   <p>
                     <span style="font-weight: 600; font-style: normal;">Previously</span>
                     B.A. in Biology @ UWO <br />
+
+                    <span style="font-weight: 600; font-style: normal; margin-top: 10px;">Currently</span>
+                    General Partner @ Providus Ventures <br />
 
                     <!-- <span style="font-weight: 600; font-style: normal; margin-top: 10px;">Currently</span>
                     General Partner @ Providus Ventures <br /> General Partner @ Vitality Capital <br /> -->
