--- a/index.html
+++ b/index.html
@@ -70,11 +70,10 @@
 
       <div class="intro-info">
         <h2 style="font-size: 30px;">SEED<span style="font-weight: 400">CODE</h2>
-        <h2 class="">Join the world’s largest startup community</h2>
-        <p class="">Experience the startup ecosystem — invest in startups, research the
-          fastest-growing
-          companies, and find a job
-          you love.</p>
+        <h2 class="">A One Stop Solution For All Your Software Development</h2>
+        <p class="">Build your startup — get funding for your software development, recruit a team overseas, and
+          build a product, service, & experience
+          cccustomers love.</p>
         <div class="">
           <a href="mailto:rabeel@seedcode.io" class=" scrollto get-started">
             <span>Get Started</span>
