porrtfolio bug fix

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <h2 class="">A One Stop Solution For All Your Software Development</h2>
         <p class="">Build your startup — get funding for your software development, recruit a team overseas, and
           build a product, service, & experience
-          cccustomers love.</p>
+          customers love.</p>
         <div class="">
           <a href="mailto:rabeel@seedcode.io" class=" scrollto get-started">
             <span>Get Started</span>
@@ -255,25 +255,25 @@
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                   labore
                   et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. </p>
-                <div> -->
-                <button class="btn preview-btn">Request Demo</button>
+                  aliquip ex ea commodo consequat. </p> -->
+                <div>
+                  <button class="btn preview-btn">Request Demo</button>
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
 
 
-        <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.1s">
-          <div class="portfolio-wrap">
-            <img src="img/portfolio/web2.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <div class="portfolio-info-header">
-                <span>Web 2</span> <a href="img/portfolio/web2.jpg" class="link-preview" data-lightbox="portfolio"
-                  data-title="Web 2" title="Preview"><i class="fa fa-expand"></i></a>
-              </div>
-              <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <img src="img/portfolio/web2.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-info-header">
+                  <span>Web 2</span> <a href="img/portfolio/web2.jpg" class="link-preview" data-lightbox="portfolio"
+                    data-title="Web 2" title="Preview"><i class="fa fa-expand"></i></a>
+                </div>
+                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 aliquip ex ea commodo consequat.</p>
 
@@ -281,51 +281,51 @@
                 labore
                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 aliquip ex ea commodo consequat. </p> -->
-              <div>
-                <button class="btn preview-btn">Request Demo</button>
+                <div>
+                  <button class="btn preview-btn">Request Demo</button>
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.2s">
-          <div class="portfolio-wrap">
-            <img src="img/portfolio/app3.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <div class="portfolio-info-header">
-                <span>App 3</span> <a href="img/portfolio/app3.jpg" class="link-preview" data-lightbox="portfolio"
-                  data-title="App 3" title="Preview"><i class="fa fa-expand"></i></a>
-              </div>
-              <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <img src="img/portfolio/app3.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-info-header">
+                  <span>App 3</span> <a href="img/portfolio/app3.jpg" class="link-preview" data-lightbox="portfolio"
+                    data-title="App 3" title="Preview"><i class="fa fa-expand"></i></a>
+                </div>
+                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                 et dolore magna aliqua. </p> -->
-              <div>
-                <button class="btn preview-btn">Request Demo</button>
+                <div>
+                  <button class="btn preview-btn">Request Demo</button>
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
 
 
-        <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.2s">
-          <div class="portfolio-wrap">
-            <img src="img/portfolio/web1.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <div class="portfolio-info-header">
-                <span>Web 1</span> <a href="img/portfolio/web1.jpg" class="link-preview" data-lightbox="portfolio"
-                  data-title="Web 1" title="Preview"><i class="fa fa-expand"></i></a>
-              </div>
-              <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <img src="img/portfolio/web1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-info-header">
+                  <span>Web 1</span> <a href="img/portfolio/web1.jpg" class="link-preview" data-lightbox="portfolio"
+                    data-title="Web 1" title="Preview"><i class="fa fa-expand"></i></a>
+                </div>
+                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                 et dolore magna aliqua. </p> -->
-              <div>
-                <button class="btn preview-btn">Request Demo</button>
-              </div>
+                <div>
+                  <button class="btn preview-btn">Request Demo</button>
+                </div>
 
+              </div>
             </div>
           </div>
-        </div>
 
-      </div>
+        </div>
 
       </div>
     </section><!-- #portfolio -->
